# Interview-AI

./: .gitignore  README.md  docker-compose.yml
backend/: .coverage  .gitignore  Dockerfile  README.md  app.py  app_old.py  config.py  langchain_convo.py  pdf_clean.py  pyproject.toml  run_tests.py  test_list.txt
backend/characters/: character.py  interviewer.py
backend/llm/: interview_agent.py  llm_graph.py  llm_interface.py  llm_interface_character.py  llm_utils.py  pdf_clean.py
backend/models/: config_model.py  profile_model.py  resume_model.py
backend/scripts/: elo_calculator.py
backend/services/: audio_processing.py  authorization_service.py  chat_history_service.py  chat_service.py  config_service.py  elo_calculator.py  file_storage.py  profile_service.py  resume_service.py  storage_service.py
backend/tests/: api_tests.yaml  conftest.py  test_auth.py  test_auth_service.py  test_character.py  test_character_classes.py  test_chat.py  test_chat_history.py  test_chat_history_service.py  test_chat_history_service_extra.py  test_chat_service.py  test_config_db.py  test_config_service.py  test_config_service_extra.py  test_controllers.py  test_elo.py  test_elo_score_extra.py  test_favorite_questions.py  test_feedback.py  test_interview_agent_unit.py  test_interview_api.py  test_interviewer.py  test_llm_modules.py  test_models.py  test_pdf_clean.py  test_picture_upload.py  test_profile.py  test_profile_service.py  test_resume_processing.py  test_resume_service.py  test_services.py  test_signup.py  test_speech_services.py  test_speech_text.py  test_storage_service.py  test_utils.py  test_weak_questions.py
backend/utils/: audio_conversion.py  error_handlers.py  file_utils.py  speech_2_text.py  text_2_speech.py  (+1 more)
(+96 files in other folders)
