[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ryan Lin  <linjinhong@yandex.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
