[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ryan Lin  <linjinhong@yandex.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-cors = "^5.0.0"

langchain-openai = "^0.3.6"
langgraph = "^0.2.74"
langchain-core = "^0.3.37"
dotenv = "^0.9.9"
langchain-community = "^0.3.18"
supabase = "^2.13.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pypdf = "^5.3.0"
pypdf2 = "^3.0.1"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
werkzeug = "^3.1.3"
speechrecognition = "^3.14.1"
google-cloud-texttospeech = "^2.25.0"


[tool.poetry.group.dev.dependencies]
reportlab = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
